# ui-case-compiler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ui-case.yml
benchmarks/context-aware/: README.md  cases.json  run_benchmark.py
docs/: context-aware-compiler-resume.md  demo-guide.md  v1-user-guide.md
docs/superpowers/plans/: 2026-07-05-v2-http-api.md  2026-07-05-v2-live-recorder.md  (+2 more)
examples/context/: login.json
examples/data/: login.csv
examples/natural_language/: baidu-search.txt  login.txt
examples/pages/: login.html
examples/plans/: baidu-search.json  login.json
examples/recordings/: login-events.json
src/ui_case_compiler/: __init__.py  browser_profile.py  config.py  errors.py
tests/: test_config.py
tests/api/: test_api_models.py  test_endpoints.py  test_service.py
tests/cli/: test_cli.py
tests/compiler/: test_context_aware_benchmark.py  test_context_aware_prompt_builder.py  test_deepseek_provider.py  test_natural_language_compiler.py  test_prompt_builder.py  test_semantic_context_collector.py
tests/data/: test_table_parser.py
tests/examples/: test_examples.py
tests/recorder/: test_live_recorder.py  test_recorder_script.py  test_recording_compiler.py
tests/reporter/: test_html_reporter.py
tests/runner/: test_dry_run_service.py  test_locator_resolver.py  test_parameter_resolver.py  test_plan_runner.py
tests/schema/: test_executable_plan.py  test_steps.py
tests/storage/: test_file_store.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css
web/src/api/: cases.ts  (+5 more)
(+72 files in other folders)
