[project]
name = "ui-case-compiler"
version = "0.1.0"
description = "Python UI case compiler for natural-language and recorded UI automation flows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.45.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "jinja2>=3.1.0",
  "rich>=13.7.0",
  "openai>=1.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[project.scripts]
ui-case = "ui_case_compiler.cli.main:app"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ui_case_compiler"]
